[package]
name = "httptool"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
bytes = "1.10.0"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["server"] }
hyper-util = { version = "0.1.10", features = ["server", "http1"] }
indicatif = { version = "0.17.11", features = ["tokio"] }
mime_guess = "2.0.5"
multer = { version = "3.1.0", features = ["tokio-io"] }
num_cpus = "1.16.0"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
strip = "symbols"
lto = "yes"
opt-level = "z"
codegen-units = 1
#panic = abort
relocation-model = "static"
